# simple-social-media-app

./: .env.template  .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  docker-build.yml
backend/: .env.template  Dockerfile  openapi.json  pyproject.toml  requirements.txt  ruff.toml  wait-for-db.sh  wait-for-services.sh
backend/src/: social-media-app.db
backend/src/social_media_app/: app.py  config.py  db.py  dtos.py  generate_openapi.py  main.py  minio_db.py  models.py  queue.py
backend/src/worker/: Dockerfile  requirements.txt  resize_worker.py  sentiment_worker.py
backend/tests/: test_api.py  test_db.py  test_minio_db.py
backend/worker/: Dockerfile  resize_worker.py
backend/worker_tests/: test_resize_worker.py  test_sentiment_worker.py
db/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
frontend/src/: App.tsx  ToDo.txt  main.tsx
frontend/src/api/: client.ts  dto.ts  posts.ts  tags.ts
frontend/src/components/: CommentForm.tsx  CommentList.tsx  PostCard.tsx  RatingStars.tsx  TagFilter.tsx
frontend/src/pages/: CreatePostPage.tsx  FeedPage.tsx  PostDetailPage.tsx
proxy/: Dockerfile  nginx.conf
